[package]
name = "splinux"
version = "2.0.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13.1", features = ["xinput", "xtest"] }
eframe = "0.31.1"
evdev = "0.13.1"
enigo = { version = "0.5.0", default-features = false, features = [
    "x11rb",
    "wayland",
] }
clap = "4.5.40"
uinput = "0.1.3"
libc = { version = "0.2.174", optional = true }
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
rfd = "0.15.3"
flume = "0.11.1"

[features]
default = ["xtst"]
xtst = ["dep:libc"]

[profile.release]
strip = true
lto = true
codegen-units = 1
