[package]
name = "splinux"
version = "2.0.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13.2", features = ["xinput", "xtest"] }
eframe = "0.33.2"
evdev = "0.13.2"
clap = "4.5.51"
uinput = "0.1.3"
libc = "0.2.177"
anyhow = "1.0.100"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
rfd = "0.15.4"
flume = "0.11.1"
serde_yaml = "0.9.34"

[profile.release]
strip = true
lto = true
codegen-units = 1
